--- a/Descriptive_stat.ipynb
+++ b/Descriptive_stat.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "Descriptive_stat.ipynb",
       "version": "0.3.2",
       "provenance": [],
       "include_colab_link": true
@@ -194,26 +194,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "25a16a1b-708f-43fe-8028-da3e422fab86"
+        "outputId": "70df396b-2258-4d44-d329-62c2b70781ac"
       },
       "source": [
-        "mean_data = [\"SUPPORT_SERVICES_EXPENDITURE\",\"CAPITAL_OUTLAY_EXPENDITURE\",\"TOTAL_EXPENDITURE\"]\n",
+        "mean_data = [\"YEAR\"]\n",
         "geometric_mean = stats.gmean(data.loc[:,mean_data])\n",
         "geometric_mean"
       ],
-      "execution_count": 28,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([nan, nan, nan])"
+              "array([2004.42001767])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 31
         }
       ]
     },
@@ -522,35 +522,27 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 333
+          "height": 34
         },
-        "outputId": "49ae5d28-cc6e-42c9-8317-fa599d5f8104"
+        "outputId": "44f9d659-ff1c-47c2-8014-f9f7deaa18ac"
       },
       "source": [
         "harmonic_mean = stats.hmean(data.loc[:,mean_data])\n",
         "harmonic_mean"
       ],
-      "execution_count": 17,
+      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/scipy/stats/stats.py:386: RuntimeWarning: invalid value encountered in greater\n",
-            "  if np.all(a > 0):\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-e9058c8f1a58>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mharmonic_mean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmean_data\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mharmonic_mean\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/scipy/stats/stats.py\u001b[0m in \u001b[0;36mhmean\u001b[0;34m(a, axis, dtype)\u001b[0m\n\u001b[1;32m    396\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msize\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1.0\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    397\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 398\u001b[0;31m         raise ValueError(\"Harmonic mean only defined if all elements greater \"\n\u001b[0m\u001b[1;32m    399\u001b[0m                          \"than zero\")\n\u001b[1;32m    400\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Harmonic mean only defined if all elements greater than zero"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2004.40638921])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
         }
       ]
     },
